Ant will now run our client with host/port parameters. If none are specified ant will run it with localhost/8081. If you want to run the client through your IDE or manually through the commandline, it will still default to localhost/8081 if you omit arguments, otherwise you can add your own host/port arguments.

--- a/build.xml
+++ b/build.xml
@@ -25,6 +25,9 @@
 	<property name="demo.dir" value="demo"/>
     <property name="server.jar.file" value="${demo.dir}/server.jar"/>
     <property name="client.jar.file" value="${demo.dir}/client.jar"/>
+	<!-- Default values for command-line properties.  Values specified on the command-line will override these. -->
+	<property name="host" value="localhost"/>
+	<property name="port" value="8081"/>
   
 	<!-- CLASSPATHS -->
 	<!-- ********** -->
@@ -137,6 +140,8 @@
 	<target name="our-client" depends="package" description="compiles, packages, and runs the student client">
 		<java jar="${java.dist}/catan-client.jar" dir="${java.dist}" fork="yes">
 			<sysproperty key="com.sun.management.jmxremote" value=""/>
+			<arg value="${host}"/>
+			<arg value="${port}"/>
 			<assertions>
 				<enable/>
 			</assertions>
