--- a/build.xml
+++ b/build.xml
@@ -84,7 +84,7 @@
     -->
 
   	<property name="java.dir" location="java"/>
-	<property name="java.src" location="${java.dir}/src"/>
+	<property name="java.src" location="${java.dir}/client"/>
     <property name="java.test" location="${java.dir}/src/model/test"/>
 	<property name="java.images" location="${java.dir}/images"/>
 	<property name="java.build" location="${java.dir}/build"/>
