--- a/build.xml
+++ b/build.xml
@@ -85,6 +85,7 @@
 
   	<property name="java.dir" location="java"/>
 	<property name="java.src" location="${java.dir}/client"/>
+	<property name="java.serversrc" location="${java.dir}/server"/>
     <property name="java.test" location="${java.dir}/src/model/test"/>
 	<property name="java.images" location="${java.dir}/images"/>
 	<property name="java.build" location="${java.dir}/build"/>
@@ -104,6 +105,9 @@
     
 	<target name="compile" depends="init" description="compile the source " >
 		<javac srcdir="${java.src}" destdir="${java.build}" debug="true" includeantruntime="true">
+			<classpath refid="java.lib.classpath" />
+		</javac>
+		<javac srcdir="${java.serversrc}" destdir="${java.build}" debug="true" includeantruntime="true">
 			<classpath refid="java.lib.classpath" />
 		</javac>
 	</target>
